Fixed CSS for commanding webapp (command argument labels no longer invisible)

--- a/src/application/web-client/src/main/webapp/pages/commanding/commanding.css
+++ b/src/application/web-client/src/main/webapp/pages/commanding/commanding.css
@@ -10,6 +10,10 @@
 	color: black;
 }
 
+.reveal-modal li {
+	color: black;
+}
+
 #cmdControls {
 	margin-top: 10px;
 	float: right;
